# blendersql

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.md  SCHEMA_PRIMER.md  __init__.py  blender_manifest.toml  operators.py  preferences.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
blendersql/: __init__.py  blender_manifest.toml  preferences.py
blendersql/bridge/: main_thread.py
blendersql/cli/: README.md  __init__.py  _blender.py  blendersql.py  runner.py
blendersql/server/: http.py  mcp.py
blendersql/sql/: __init__.py  engine.py  result.py
blendersql/sql/functions/: __init__.py  _meta.py  bpy_exec.py
blendersql/sql/functions/verbs/: _common.py  gp.py  nodes.py
blendersql/sql/vtables/: armatures.py  assets.py  base.py  constraints.py  meshes.py  modifiers.py  node_trees.py  objects.py  scenes.py  session_log.py  shape_keys.py  welcome.py
blendersql/wheels/: README.md
bridge/: __init__.py  main_thread.py
cli/: _blender.py  runner.py
scripts/: fetch_wheels.py  regen_skills.py
server/: __init__.py
skills/: README.md
skills/.agents/plugins/: marketplace.json
skills/.claude-plugin/: marketplace.json
skills/plugins/blendersql/.claude-plugin/: plugin.json
skills/plugins/blendersql/.codex-plugin/: plugin.json
skills/plugins/blendersql/skills/analysis/: SKILL.md
skills/plugins/blendersql/skills/animation/: SKILL.md
skills/plugins/blendersql/skills/assets/: SKILL.md
skills/plugins/blendersql/skills/connect/: SKILL.md
skills/plugins/blendersql/skills/functions/: SKILL.md
skills/plugins/blendersql/skills/grease_pencil/: SKILL.md
skills/plugins/blendersql/skills/materials/: SKILL.md
skills/plugins/blendersql/skills/mesh/: SKILL.md
skills/plugins/blendersql/skills/modifiers/: SKILL.md
skills/plugins/blendersql/skills/python/: SKILL.md
skills/plugins/blendersql/skills/scene/: SKILL.md
skills/plugins/blendersql/skills/vse/: SKILL.md
sql/functions/: __init__.py  _meta.py  audit.py  bpy_eval.py  bpy_exec.py  bpy_op.py  jsonify.py  registry.py
sql/functions/verbs/: __init__.py  cleanup.py  files.py  gp.py  nodes.py  scene.py  vse.py
sql/vtables/: __init__.py  _meta.py  _params.py  actions.py  animation.py  armatures.py  assets.py  base.py  bsql.py  cameras.py  collections.py  constraints.py  curves.py  custom_properties.py  datablocks.py  gp_frames.py  grease_pencils.py  grep.py  lights.py  material_gp_settings.py  materials.py  meshes.py  misc.py  modifiers.py  node_trees.py  objects.py  scenes.py  session_log.py  shape_keys.py  vertex_groups.py  vse.py  welcome.py
tests/: README.md  conftest.py  pytest.ini  runner.py  test_cli.py  test_custom_properties_writes.py  test_functions.py  test_jsonify.py  test_listen_config.py  test_m3c_writes.py  test_mcp.py  test_regen_script_smoke.py  test_skill_regen.py  test_soak.py  test_verbs.py  test_vtables.py  test_writes.py
tests/fixtures/: build_fixture.py  expected.py
wheels/: apsw-3.53.1.0-cp313-cp313-macosx_11_0_arm64.whl
