[project]
name = "blendersql"
version = "0.0.1"
description = "SQL interface to bpy.data for AI agents"
requires-python = ">=3.13"
license = { text = "MPL-2.0" }
authors = [{ name = "Paolo Montesel", email = "paolo.montesel@gmail.com" }]
dependencies = [
    "apsw>=3.50.4",
]

[project.scripts]
blendersql = "blendersql.cli.blendersql:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
# `blendersql/` is the Blender addon package; the standalone CLI lives at
# `blendersql.cli.blendersql:main` and is exposed as a console script.
packages = ["blendersql"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
exclude = ['reference/', 'build/', 'dist/', '\.venv/', 'experiments/', 'tests/']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# E501: line length handled by the formatter.
# RUF012: bpy registration classes legitimately use set/dict class attrs
#         (bl_options, etc.) — annotating them ClassVar buys nothing here.
ignore = ["E501", "RUF012"]

# Note: pytest config lives in tests/pytest.ini, not here. The addon package
# `blendersql/` imports bpy at top level (it's a Blender extension), and bpy
# only exists inside Blender. Anchoring pytest's rootdir at tests/ via
# tests/pytest.ini stops collection from walking up and importing the addon.
